--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,3 +1,161 @@
+@inproceedings{muller_lecture_2016,
+	title = {Lecture {Translator}: {Speech} translation framework for simultaneous lecture translation},
+	url = {http://aclweb.org/anthology/N16-3017},
+	doi = {10.18653/v1/N16-3017},
+	urldate = {2017-10-04},
+	publisher = {Association for Computational Linguistics},
+	author = {Müller, Markus and Nguyen, Thai Son and Niehues, Jan and Cho, Eunah and Krüger, Bastian and Ha, Thanh-Le and Kilgour, Kevin and Sperber, Matthias and Mediani, Mohammed and Stüker, Sebastian and Waibel, Alex},
+	year = {2016},
+	pages = {82--86},
+}
+
+@inproceedings{stewart_automatic_2018,
+	title = {Automatic Estimation of Simultaneous Interpreter Performance},
+	author = {Stewart, Craig and Vogler, Nikolai and Hu, Junjie and Boyd-Graber, Jordan and Neubig, Graham},
+	year = {2018}, 
+	booktitle = {ACL 2018}
+}
+
+@book{neufeind_work_2018,
+	address = {Lanham, MD},
+	title = {Work in the digital age: {{C}}hallenges of the fourth industrial revolution},
+	isbn = {978-1-78660-906-9},
+	shorttitle = {Work in the digital age},
+	publisher = {Policy Network},
+	editor = {Neufeind, Max and O'Reilly, Jacqueline and Ranft, Florian},
+	year = {2018}
+}
+
+@book{takeda_new_2016,
+	address = {Amsterdam; Philadelphia},
+	series = {Benjamins Translation Library},
+	title = {New insights in the history of interpreting},
+	isbn = {978-90-272-5867-0},
+	number = {122},
+	publisher = {John Benjamins Publishing Company},
+	editor = {Takeda, Kayoko and Baigorri Jalón, Jesús},
+	year = {2016},
+	keywords = {Translating and interpreting, History, Simultaneous interpreting}
+}
+
+@article{chang_conference_2018,
+	title = {Conference interpreting and knowledge acquisition: {How} professional interpreters tackle unfamiliar topics},
+	volume = {20},
+	issn = {1384-6647, 1569-982X},
+	shorttitle = {Conference interpreting and knowledge acquisition}, 
+	doi = {10.1075/intp.00010.cha}, 
+	number = {2},
+	urldate = {2018-10-04},
+	journal = {Interpreting},
+	author = {Chang, Chia-chien and Wu, Michelle Min-chia and Kuo, Tien-chun Gina},
+	month = {9},
+	year = {2018},
+	pages = {204--231},
+}
+@article{xu_corpus-based_2018,
+	title = {Corpus-based terminological preparation for simultaneous interpreting},
+	volume = {20},
+	issn = {1384-6647, 1569-982X},
+	doi = {10.1075/intp.00002.xu}, 
+	number = {1},
+	urldate = {2018-10-04},
+	journal = {Interpreting},
+	author = {Xu, Ran},
+	month = {4},
+	year = {2018},
+	pages = {29--58}
+}
+
+@book{finn_what_2017,
+	address = {Cambridge, MA},
+	title = {What algorithms want: {{I}}magination in the age of computing},
+	isbn = {978-0-262-03592-7},
+	shorttitle = {What algorithms want},
+	publisher = {MIT Press},
+	author = {Finn, Ed},
+	year = {2017}
+}
+
+@techreport{pernice_f-shaped_2017,
+	title = {F-Shaped Pattern of Reading on the Web: {Misunderstood}, But Still Relevant (Even on Mobile)},
+	url = {https://www.nngroup.com/articles/f-shaped-pattern-reading-web-content/},
+	author = {Pernice, Kara},
+	year = {2017}
+}
+
+@inproceedings{zanettin_corpora_2002,
+	title = {Corpora in translation practice},
+	booktitle = {Proceedings of the {Workshop} {Language} {Resources} for {Translation} {Work} and {Research}},
+	author = {Zanettin, Federico},
+	year = {2002} 
+}
+
+@article{ross_print_2017,
+	title = {Print versus digital texts: {{U}}nderstanding the experimental research and challenging the dichotomies},
+	volume = {25},
+	issn = {2156-7077},
+	shorttitle = {Print versus digital texts},
+	doi = {10.25304/rlt.v25.1976},
+	number = {0},
+	urldate = {2018-10-04},
+	journal = {Research in Learning Technology},
+	author = {Ross, Bella and Pechenkina, Ekaterina and Aeschliman, Carol and Chase, Anne-Marie},
+	month = {11},
+	year = {2017}
+}
+
+@book{galimberti_i_2009,
+	address = {Milano},
+	number = {1},
+	series = {Serie bianca},
+	title = {I miti del nostro tempo},
+	isbn = {978-88-07-17162-8},
+	publisher = {G. Feltrinelli},
+	author = {Galimberti, Umberto},
+	year = {2009},
+	keywords = {Social psychology}
+}
+
+@book{besnier_homme_2012,
+	address = {Paris},
+	title = {L'homme simplifié: le syndrome de la touche étoile},
+	isbn = {978-2-213-66235-0},
+	shorttitle = {L'homme simplifié},
+	publisher = {Fayard},
+	author = {Besnier, Jean-Michel},
+	year = {2012}
+}
+
+@article{pym_what_2011,
+	title = {What technology does to translating},
+	volume = {3}, 
+	issn = {1836-9324},
+	url = {http://www.trans-int.org/index.php/transint/article/view/121},
+	doi = {10.12807/t&i.v3i1.121}, 
+	number = {1},
+	urldate = {2015-08-13},
+	journal = {Translation \& Interpreting},
+	author = {Pym, Anthony},
+	year = {2011}, 
+	pages = {1--9}
+}
+
+@article{ursula_huws_logged_2016,
+	title = {Logged labour: {{A}} new paradigm of work organisation?},
+	volume = {10},
+	issn = {1745641X},
+	shorttitle = {Logged labour}, 
+	doi = {10.13169/workorgalaboglob.10.1.0007},
+	number = {1},
+	urldate = {2018-09-25},
+	journal = {Work Organisation, Labour \& Globalisation},
+	author = {Ursula Huws},
+	year = {2016},
+	pages = {7}
+}
+
+
+
 @misc{AIIC2000,
 	author 	    = {AIIC},
 	title       = {Code for the use of new technologies in conference interpretation},
@@ -98,7 +256,7 @@
 	address = {Mainz},
 	author = {Fantinuoli, Claudio},
 	publisher = {University of Mainz},
-	title = {{Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter}},
+	title = {Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter},
 	year = {2012}
 }
 
@@ -291,7 +449,7 @@
 @inproceedings{vanRotterdam2011,
 	address = {Guildford},
 	author = {{van Rotterdam}, Peter and {van den Hoogen}, Ronald},
-	booktitle = {{Videoconference and Remote Interpreting in Criminal Proceedings}},
+	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {187--198},
 	publisher = {University of Surrey},
@@ -302,7 +460,7 @@
 @inproceedings{Sandrelli2007b,
 	address = {Saarbrücken},
 	author = {Sandrelli, Annalisa},
-	booktitle = {{Challenges of Multidimensional Translation, Proceedings of the Marie Curie Euroconferences. {{MuT}ra}: {{C}}hallenges of Multidimensional Translation}},
+	booktitle = {Challenges of Multidimensional Translation, {Proceedings of the Marie Curie Euroconferences. {{MuT}ra}: {{C}}hallenges of Multidimensional Translation}},
 	editor = {Nauert, Sandra},
 	title = {Designing {{CAIT}} (Computer-Assisted Interpreter Training) Tools: {{B}}lack {{B}}ox},
 	year = {2005}
@@ -401,7 +559,7 @@
 @incollection{Rombouts2011,
 	address = {Guildford},
 	author = {Rombouts, Dirk},
-	booktitle = {{Videoconference and Remote Interpreting in Criminal Proceedings}},
+	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {159--166},
 	publisher = {University of Surrey},
@@ -434,11 +592,11 @@
 @incollection{Napier2011,
 	address = {Guildford},
 	author = {Napier, Jemina},
-	booktitle = {{Videoconference and Remote Interpreting in Criminal Proceedings}},
+	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {145--185},
 	publisher = {University of Surrey},
-	title = {{Here} or there? {{A}}n assessment of video remote signed language interpreter-mediated interaction in court},
+	title = {Here or there? {{A}}n assessment of video remote signed language interpreter-mediated interaction in court},
 	year = {2011}
 }
 
@@ -518,7 +676,7 @@
 	editor = {Gross-Dinter, Ursula},
 	pages = {51--92},
 	publisher = {Frank \& Timme},
-	title = {{{V}}isueller {{I}}nput beim {{R}}emote {{I}}nterpreting: {{{{E}}}}ine empirische {{{U}}}ntersuchung zum {{{{E}}}}influss des visuellen {{I}}nputs auf die {{Q}}ualität des {{D}}olmetschprodukts beim {{R}}emote {{I}}nterpreting anhand des {{S}}prachenpaars {{D}}eutsch-{{I}}talienisch},
+	title = {{{{V}}isueller {{I}}nput beim {{R}}emote {{I}}nterpreting: {{{{E}}}}ine empirische {{{U}}}ntersuchung zum {{{{E}}}}influss des visuellen {{I}}nputs auf die {{Q}}ualität des {{D}}olmetschprodukts beim {{R}}emote {{I}}nterpreting anhand des {{S}}prachenpaars {{D}}eutsch-{{I}}talienisch}},
 	year = {2016}
 }
 
@@ -646,6 +804,19 @@
 	year = {2011}
 }
 
+@incollection{Causo2011b,
+	author 		= {Causo, José Esteban},
+	year 		= {2011},
+	title 		= {Conference interpreting with information and communication 
+technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}},
+	editor 		= {Braun, Sabine and Taylor, Judith L.}, 
+	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
+	address 	= {Guilford},
+	publisher 	= {University of Surrey},
+	pages        = {199--203}
+}
+
+
 @incollection{Braun2015,
 	address = {Abingdon/New York},
 	author = {Braun, Sabine},
@@ -659,7 +830,7 @@
 @incollection{Braun2011c,
 	address = {Guildford},
 	author = {Braun, Sabine and Taylor, Judith L. and Miler-Cassino, Joanna and Rybińska, Zofia and Balogh, Katalin and Hertog, Eric and Rombouts, Dirk},
-	booktitle = {{Videoconference and Remote Interpreting in Criminal Proceedings}},
+	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {233--288},
 	publisher = {University of Surrey},
@@ -719,7 +890,7 @@
 	editor = {Pellat, V. and Griffiths, K. and Shao-Chuan, W.},
 	pages = {229 -- 249},
 	publisher = {Peter Lang},
-	title = {{The Use of Pedagogical and Non-pedagogical {ICT} in Conference Interpreter Training}},
+	title = {The Use of Pedagogical and Non-pedagogical {ICT} in Conference Interpreter Training},
 	year = {2010}
 }
 
@@ -1411,15 +1582,14 @@ im Gesundheitsbereich}},
 	author = {Gile, Daniel},
 	journal = {The Interpreters' Newsletter},
 	pages = {4--22},
-	title = {{{Le}} partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
+	title = {Le partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
 	volume = {1},
 	year = {1988}
 }
 
 @article{Fantinuoli2018c,
 	author = {Fantinuoli, Claudio},
-	journal = {The Interpreters' Newsletter},
-	pages = {x--x},
+	journal = {The Interpreters' Newsletter}, 
 	title = {The use of comparable corpora in interpreting practice and teaching},
 	volume = {1},
 	year = {2018}
@@ -1430,7 +1600,7 @@ im Gesundheitsbereich}},
 	journal = {Translation \& Interpreting},
 	number = {2},
 	pages = {24--37},
-	title = {{{Computer-Assisted Preparation in Conference Interpreting}}},
+	title = {Computer-Assisted Preparation in Conference Interpreting},
 	volume = {9},
 	year = {2017}
 }
