updated figures in prandi

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1241,7 +1241,7 @@ im Gesundheitsbereich}},
 	journal = {Special issue of the International Journal of Bilingualism},
 	number = {2},
 	pages = {228--242},
-	title = {Cognitive load in simultaneous interpreting: {{{M}}}odel meets data},
+	title = {Cognitive load in simultaneous interpreting: {M}odel meets data},
 	volume = {16},
 	year = {2011}
 }
@@ -1251,7 +1251,7 @@ im Gesundheitsbereich}},
 	journal = {Interpreting},
 	number = {2},
 	pages = {176--204},
-	title = {Cognitive Load in Simultaneous Interpreting: {{{{{E}}}}}xisting Theories – New Models},
+	title = {Cognitive Load in Simultaneous Interpreting: {E}xisting Theories – New Models},
 	volume = {13},
 	year = {2011}
 }
