unknown error related to citing

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -919,8 +919,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 @incollection{Andres2009,
 	address = {München},
 	author = {Andres, Dörte and Falk, Stefanie},
-	booktitle = {{Spürst Du wie der Bauch rauf runter? Fachdolmetschen
-im Gesundheitsbereich}},
+	booktitle = {{Spürst Du wie der Bauch rauf runter? Fachdolmetschen im Gesundheitsbereich}},
 	editor = {Andres, Dörte and Pöllabauer, Sonja},
 	pages = {9–27},
 	series = {InterPartes},
