Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,7 +1,6 @@
 @inproceedings{muller_lecture_2016,
 	title = {Lecture {Translator}: {Speech} translation framework for simultaneous lecture translation},
 	url = {http://aclweb.org/anthology/N16-3017},
-	doi = {10.18653/v1/N16-3017},
 	urldate = {2017-10-04},
 	publisher = {Association for Computational Linguistics},
 	author = {Müller, Markus and Nguyen, Thai Son and Niehues, Jan and Cho, Eunah and Krüger, Bastian and Ha, Thanh-Le and Kilgour, Kevin and Sperber, Matthias and Mediani, Mohammed and Stüker, Sebastian and Waibel, Alex},
@@ -13,7 +12,8 @@
 	title = {Automatic Estimation of Simultaneous Interpreter Performance},
 	author = {Stewart, Craig and Vogler, Nikolai and Hu, Junjie and Boyd-Graber, Jordan and Neubig, Graham},
 	year = {2018}, 
-	booktitle = {ACL 2018}
+	booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics},
+	pages = {662--666},
 }
 
 @book{neufeind_work_2018,
@@ -27,12 +27,12 @@
 }
 
 @book{takeda_new_2016,
-	address = {Amsterdam; Philadelphia},
+	address = {Amsterdam/Philadelphia},
 	series = {Benjamins Translation Library},
 	title = {New insights in the history of interpreting},
 	isbn = {978-90-272-5867-0},
 	number = {122},
-	publisher = {John Benjamins Publishing Company},
+	publisher = {John Benjamins},
 	editor = {Takeda, Kayoko and Baigorri Jalón, Jesús},
 	year = {2016},
 	keywords = {Translating and interpreting, History, Simultaneous interpreting}
@@ -43,7 +43,6 @@
 	volume = {20},
 	issn = {1384-6647, 1569-982X},
 	shorttitle = {Conference interpreting and knowledge acquisition}, 
-	doi = {10.1075/intp.00010.cha}, 
 	number = {2},
 	urldate = {2018-10-04},
 	journal = {Interpreting},
@@ -56,7 +55,6 @@
 	title = {Corpus-based terminological preparation for simultaneous interpreting},
 	volume = {20},
 	issn = {1384-6647, 1569-982X},
-	doi = {10.1075/intp.00002.xu}, 
 	number = {1},
 	urldate = {2018-10-04},
 	journal = {Interpreting},
@@ -95,7 +93,6 @@
 	volume = {25},
 	issn = {2156-7077},
 	shorttitle = {Print versus digital texts},
-	doi = {10.25304/rlt.v25.1976},
 	number = {0},
 	urldate = {2018-10-04},
 	journal = {Research in Learning Technology},
@@ -130,8 +127,6 @@
 	title = {What technology does to translating},
 	volume = {3}, 
 	issn = {1836-9324},
-	url = {http://www.trans-int.org/index.php/transint/article/view/121},
-	doi = {10.12807/t&i.v3i1.121}, 
 	number = {1},
 	urldate = {2015-08-13},
 	journal = {Translation \& Interpreting},
@@ -145,13 +140,12 @@
 	volume = {10},
 	issn = {1745641X},
 	shorttitle = {Logged labour}, 
-	doi = {10.13169/workorgalaboglob.10.1.0007},
 	number = {1},
 	urldate = {2018-09-25},
 	journal = {Work Organisation, Labour \& Globalisation},
 	author = {Ursula Huws},
 	year = {2016},
-	pages = {7}
+	pages = {7--26}
 }
 
 
@@ -256,7 +250,7 @@
 	address = {Mainz},
 	author = {Fantinuoli, Claudio},
 	publisher = {University of Mainz},
-	title = {Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter},
+	title = {Design and implementation of a terminology and knowledge management software for conference interpreter},
 	year = {2012}
 }
 
@@ -310,7 +304,7 @@
 @misc{Prandi2016,
 	address = {Mainz/Germersheim},
 	author = {Prandi, Bianca},
-	howpublished = {Poster presented at {TRA\&CO} Symposium, {Johannes} Gutenberg University Mainz/Germersheim},
+	howpublished = {Poster presented at {TRA\&CO} Symposium, {Johannes} Gutenberg University},
 	title = {Analysis of the impact of {{CAI}} tools on simultaneous interpreting with a focus on cognitive processes and terminology consistency},
 	year = {2016}
 }
@@ -372,14 +366,18 @@
 	year = {2004}
 }
 
-@misc{Costa2016,
+@incollection{Costa2016,
+	address = {Leiden},
 	author = {Costa, Hernani and Corpas Pastor, Gloria and Durán-Muñoz, Isabel},
-	title = {An Interpreters’ Guide to Selecting Terminology Management Tools},
-	year = {2016}
+	booktitle = {Trends in {E}-Tools and Resources for Translators and Interpreters},
+	editor = {Corpas Pastor, Gloria and Durán-Muñoz, Isabel},
+	pages = {57--84},
+	publisher = {Brill},
+	title = {Assessing Terminology Management Systems for Interpreters},
+	year = {2018}
 }
-
 @misc{Bail2008,
-	author = {Bail for Immigration Detainees and the British Refugee Council},
+	author = {{Bail for Immigration Detainees and the British Refugee Council}},
 	urldate = {2012-04-15},
 	url = {http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08},
 	title = {A monitoring exercise by Bail for Immigration Detainees and the Refugee Council: {{I}}mmigration bail hearings by video link},
@@ -460,7 +458,7 @@
 @inproceedings{Sandrelli2007b,
 	address = {Saarbrücken},
 	author = {Sandrelli, Annalisa},
-	booktitle = {Challenges of Multidimensional Translation, {Proceedings of the Marie Curie Euroconferences. {{MuT}ra}: {{C}}hallenges of Multidimensional Translation}},
+	booktitle = {Challenges of multidimensional translation, {Proceedings of the Marie Curie Euroconferences. {{MuT}ra}: {{C}}hallenges of multidimensional translation}},
 	editor = {Nauert, Sandra},
 	title = {Designing {{CAIT}} (Computer-Assisted Interpreter Training) Tools: {{B}}lack {{B}}ox},
 	year = {2005}
@@ -471,7 +469,9 @@
 	author = {Prandi, Bianca},
 	booktitle = {{Proceedings of the Translating and the Computer 39 Conference}},
 	title = {Designing a Multimethod Study on the Use of {{CAI}} Tools during Simultaneous Interpreting},
-	year = {2017}
+	year = {2017},
+	address= {Geneva},
+	publisher = {Editions Tradulex}
 }
 
 @inproceedings{Prandi2015b,
@@ -480,6 +480,8 @@
 	booktitle = {{Proceedings of the Translating and the Computer 37 Conference}},
 	title = {The use of {{CAI}} tools in interpreters’ training: {{A}} pilot Study},
 	year = {2015}
+	address= {Geneva},
+	publisher = {Editions Tradulex}
 }
 
 @inproceedings{Motta2006,
@@ -500,12 +502,13 @@
 	location = {London},
 	pages = {367--377},
 	title = {Speech Recognition in the Interpreter Workstation}
+	address= {Geneva},
+	publisher = {Editions Tradulex}
 }
 
 @incollection{Wiegand2003, 
 	author = {Wiegand, Thomas and Sullivan, Gary J. and Bjøntegaard, Gisle and Luthra, Ajay},
 	booktitle = {{{C}}ircuits and Systems for Video Technology},
-	doi = {10.1109/{TCSVT}.2003.815165},
 	editor = {{IEEE} Transactions},
 	pages = {560--576}, 
 	sortname = {Wiegand, Thomas and Sullivan, Gary J. and Bjontegaard, Gisle and Luthra, Ajay},
@@ -559,7 +562,7 @@
 @incollection{Rombouts2011,
 	address = {Guildford},
 	author = {Rombouts, Dirk},
-	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
+	booktitle = {Videoconference and remote interpreting in criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {159--166},
 	publisher = {University of Surrey},
@@ -592,7 +595,7 @@
 @incollection{Napier2011,
 	address = {Guildford},
 	author = {Napier, Jemina},
-	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
+	booktitle = {Videoconference and remote interpreting in criminal proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {145--185},
 	publisher = {University of Surrey},
@@ -619,7 +622,7 @@
 	editor = {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages = {89--114},
 	publisher = {St Jerome},
-	title = {Interpreters in emergency wards. {{A}}n empirical study of doctor-interpreter-patient interaction},
+	title = {Interpreters in emergency wards: {{A}}n empirical study of doctor-interpreter-patient interaction},
 	year = {2009}
 }
 
@@ -653,7 +656,7 @@
 	pages = {141--155},
 	publisher = {St Jerome},
 	sortname = {Martin, Anne and Ortega Herraez, Juan Miguel},
-	title = {Court interpreters' self perception: {{A}} spanish case study},
+	title = {Court interpreters' self perception: {{A}} {s}panish case study},
 	year = {2009}
 }
 
@@ -665,14 +668,14 @@
 	pages = {203--230},
 	publisher = {John Benjamins},
 	sortname = {Martin, Anne and Abril Marti, Isabel},
-	title = {Community interpreter self-perception: {{A}} spanish case study},
+	title = {Community interpreter self-perception: {{A}} {s}panish case study},
 	year = {2008}
 }
 
 @incollection{Luisetto2016,
 	address = {Berlin},
 	author = {Luisetto, Martina},
-	booktitle = {Dolmetschen 3.0 -- Einblicke in einen Beruf im {Wandel}},
+	booktitle = {Dolmetschen 3.0 -- {E}inblicke in einen {B}eruf im {Wandel}},
 	editor = {Gross-Dinter, Ursula},
 	pages = {51--92},
 	publisher = {Frank \& Timme},
@@ -683,7 +686,7 @@
 @incollection{Kurz2000,
 	address = {Tübingen},
 	author = {Kurz, Ingrid},
-	booktitle = {Translationswissenschaft: {{F}}estschrift für Mary Snell-Hornby zum 60. {{G}}eburtstag},
+	booktitle = {Translationswissenschaft: {{F}}estschrift für {Mary Snell-Hornby} zum 60. {{G}}eburtstag},
 	editor = {Kadric, Midra and Kaindl, Klaus and Pöchhacker, Franz},
 	pages = {291--302},
 	publisher = {Stauffenburg Festschriften},
@@ -727,7 +730,7 @@
 @incollection{Fowler2013,
 	address = {Amsterdam/Philadelphia},
 	author = {Fowler, Yvonne},
-	booktitle = {Interpreting in a Changing Landscape. {{S}}elected papers from Critical Link 6},
+	booktitle = {Interpreting in a Changing Landscape: {{S}}elected papers from Critical Link 6},
 	editor = {Schäffner, Christina and Kredens, Krzysztof and Fowler, Yvonne},
 	pages = {226--248},
 	publisher = {John Benjamins},
@@ -801,6 +804,7 @@
 	publisher = {University of Surrey},
 	sortname = {Causo, Jose Esteban},
 	title = {Technical Guidelines for Remote Interpretation},
+	pages        = {301--306}
 	year = {2011}
 }
 
@@ -830,7 +834,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 @incollection{Braun2011c,
 	address = {Guildford},
 	author = {Braun, Sabine and Taylor, Judith L. and Miler-Cassino, Joanna and Rybińska, Zofia and Balogh, Katalin and Hertog, Eric and Rombouts, Dirk},
-	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
+	booktitle = {Videoconference and remote interpreting in criminal proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {233--288},
 	publisher = {University of Surrey},
@@ -890,7 +894,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	editor = {Pellat, V. and Griffiths, K. and Shao-Chuan, W.},
 	pages = {229 -- 249},
 	publisher = {Peter Lang},
-	title = {The Use of Pedagogical and Non-pedagogical {ICT} in Conference Interpreter Training},
+	title = {The use of pedagogical and non-pedagogical {ICT} in conference interpreter training},
 	year = {2010}
 }
 
@@ -919,7 +923,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 @incollection{Andres2009,
 	address = {München},
 	author = {Andres, Dörte and Falk, Stefanie},
-	booktitle = {{Spürst Du wie der Bauch rauf runter? Fachdolmetschen im Gesundheitsbereich}},
+	booktitle = {{Spürst Du wie der Bauch rauf-runter? Fachdolmetschen im Gesundheitsbereich}},
 	editor = {Andres, Dörte and Pöllabauer, Sonja},
 	pages = {9–27},
 	series = {InterPartes},
@@ -933,7 +937,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	address = {London},
 	author = {Yu, Dong and  Deng, Li},
 	publisher = {Springer},
-	title = {Automatic Speech Recognition. {{A}} Deep Learning Approach},
+	title = {Automatic Speech Recognition: {{A}} Deep Learning Approach},
 	year = {2016}
 }
 
@@ -974,7 +978,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	address = {Amsterdam/Philadelphia},
 	author = {Setton, Robin},
 	publisher = {John Benjamins},
-	title = {Simultaneous Interpretation. {{{A}}} Cognitive-Pragmatic Analysis},
+	title = {Simultaneous Interpretation: {{{A}}} Cognitive-Pragmatic Analysis},
 	year = {1999}
 }
 
@@ -987,12 +991,13 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	year = {2006}
 }
 
-@book{Seeber2007,
+@inproceedings{Seeber2007,
 	address = {Antwerp},
 	author = {Seeber, Kilian G.},
 	pages = {1382--1385},
 	publisher = {Interspeech},
 	title = {Thinking outside the cube: {{M}}odelling language processing tasks in a multiple resource paradigm},
+    booktitle = {8th Annual Conference of the International Speech Communication Association},
 	year = {2007}
 }
 
@@ -1010,7 +1015,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	author = {Pöchhacker, Franz},
 	publisher = {Gunter Narr},
 	sortname = {Pochhacker, Franz},
-	title = {Simultandolmetschen als komlpexes Handeln},
+	title = {Simultandolmetschen als komlpexes {H}andeln},
 	year = {1994}
 }
 
@@ -1035,7 +1040,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	address = {Carlton-le-Moorland, Lincoln, United Kingdom},
 	author = {Llewellyn-Jones, Peter, and Lee, Robert},
 	publisher = {SLI Press},
-	title = {Redefining the role of the community interpreter : {{T}}he concept of role-space},
+	title = {Redefining the role of the community interpreter: {{T}}he concept of role-space},
 	year = {2014}
 }
 
@@ -1155,7 +1160,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	address = {Chicago/London},
 	author = {Berk-Seligson, Susan},
 	publisher = {University of Chicago Press},
-	title = {The bilingual courtroom : {{C}}ourt interpreters in the judicial process},
+	title = {The bilingual courtroom: {{C}}ourt interpreters in the judicial process},
 	year = {1990}
 }
 
@@ -1179,10 +1184,10 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 
 @article{Will2015,
 	author = {Will, Martin},
-	journal = {Zeitschrift Für Translationswissenschaft Und Fachkommunikation},
+	journal = {Zeitschrift für Translationswissenschaft und Fachkommunikation},
 	number = {1},
 	pages = {179--201},
-	title = {{Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen}},
+	title = {{Zur Eignung} Simultanfähiger {Terminologiesysteme für das Konferenzdolmetschen}},
 	volume = {8},
 	year = {2015}
 }
@@ -1227,7 +1232,6 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 
 @article{Singh2016,
 	author = {Singh, Hardeep and Mian, M},
-	doi = {10.5120/ijca2016909537},
 	journal = {International Journal of Computer Applications},
 	pages = {6--10},
 	title = {Comparative Study and Analysis of various {{VoIP}} coding Algorithms},
@@ -1270,7 +1274,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	number = {2},
 	pages = {269--303},
 	sortname = {Sandrelli, Annalisa and {de Manuel Jerez}, Jesus},
-	title = {The Impact of Information and Communication Technology on Interpreter Training. {{{S}}}tate of the Art and Future Prospects},
+	title = {The Impact of Information and Communication Technology on Interpreter Training: {{{S}}}tate of the Art and Future Prospects},
 	volume = {1},
 	year = {2007}
 }
@@ -1348,7 +1352,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {Translation \& Interpreting},
 	number = {2},
 	pages = {39--54},
-	title = {A Study on the Amenability of Digital {Pen} Technology in a Hybrid Mode of Interpreting: {{{C}}}onsec-Simul with Notes},
+	title = {A Study on the Amenability of Digital Pen Technology in a Hybrid Mode of Interpreting: {{{C}}}onsec-Simul with Notes},
 	volume = {6},
 	year = {2014}
 }
@@ -1377,7 +1381,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {Interpreting},
 	number = {1},
 	pages = {21–38},
-	title = {Videoconferencing: {{T}}echniques and challanges},
+	title = {Videoconferencing: {{T}}echniques and challenges},
 	volume = {1},
 	year = {1996}
 }
@@ -1404,7 +1408,6 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 
 @article{McKay2016,
 	author = {McKay, Carolyn},
-	doi = {10.5204/ijcjsd.v5i1.283},
 	journal = {International Journal for Crime, Justice and Social Democracy},
 	number = {1},
 	pages = {21--37},
@@ -1446,7 +1449,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	author = {Licoppe, Christian},
 	journal = {Journal of Pragmatics},
 	pages = {117--134},
-	title = {Video communication and 'camera actions': {{T}}he production of wide video shots in courtrooms with remote defendants},
+	title = {Video communication and ``camera actions'': {{T}}he production of wide video shots in courtrooms with remote defendants},
 	volume = {76},
 	year = {2015}
 }
@@ -1495,7 +1498,6 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {Meta},
 	number = {4},
 	title = {Self-assessment as an autonomous learning tool in an interpretation classroom},
-	doi = {doi:10.7202/019869ar},
 	volume = {50},
 	year = {2005}
 }
@@ -1554,7 +1556,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {Interpreting},
 	number = {1},
 	pages = {95--118},
-	title = {The silver lining. {{T}}echnology and self-study in the interpreting classroom},
+	title = {The silver lining: {{T}}echnology and self-study in the interpreting classroom},
 	volume = {9},
 	year = {2007}
 }
@@ -1566,6 +1568,8 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	title = {A Comparative User Evaluation of Tablets and Tools for Consecutive Interpreters},
 	volume = {39},
 	year = {2017}
+	address= {Geneva},
+	publisher = {Editions Tradulex}
 }
 
 @article{Gile1999,
@@ -1599,7 +1603,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {Translation \& Interpreting},
 	number = {2},
 	pages = {24--37},
-	title = {Computer-Assisted Preparation in Conference Interpreting},
+	title = {Computer-assisted preparation in conference interpreting},
 	volume = {9},
 	year = {2017}
 }
@@ -1661,13 +1665,11 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	volume = {16},
 	number = {4},
 	pages = {199--210},
-	doi = {10.7202/001972ar},
 	year = {1971},
 }
 
 @article{Angelelli2000,
 	author = {Angelelli, Claudia},
-	doi = {10.7202/001891ar},
 	journal = {Meta},
 	number = {4},
 	pages = {580–592},
