fix syntax errors in bib

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -479,7 +479,7 @@
 	author = {Prandi, Bianca},
 	booktitle = {{Proceedings of the Translating and the Computer 37 Conference}},
 	title = {The use of {{CAI}} tools in interpreters’ training: {{A}} pilot Study},
-	year = {2015}
+	year = {2015},
 	address= {Geneva},
 	publisher = {Editions Tradulex}
 }
@@ -501,7 +501,7 @@
 	date = {2017},
 	location = {London},
 	pages = {367--377},
-	title = {Speech Recognition in the Interpreter Workstation}
+	title = {Speech Recognition in the Interpreter Workstation},
 	address= {Geneva},
 	publisher = {Editions Tradulex}
 }
@@ -804,7 +804,7 @@
 	publisher = {University of Surrey},
 	sortname = {Causo, Jose Esteban},
 	title = {Technical Guidelines for Remote Interpretation},
-	pages        = {301--306}
+	pages        = {301--306},
 	year = {2011}
 }
 
@@ -1567,7 +1567,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	pages = {40--50},
 	title = {A Comparative User Evaluation of Tablets and Tools for Consecutive Interpreters},
 	volume = {39},
-	year = {2017}
+	year = {2017},
 	address= {Geneva},
 	publisher = {Editions Tradulex}
 }
