Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,7 +1,5 @@
 @inproceedings{muller_lecture_2016,
 	title = {Lecture {Translator}: {Speech} translation framework for simultaneous lecture translation},
-	url = {http://aclweb.org/anthology/N16-3017},
-	urldate = {2017-10-04},
 	publisher = {Association for Computational Linguistics},
 	author = {Müller, Markus and Nguyen, Thai Son and Niehues, Jan and Cho, Eunah and Krüger, Bastian and Ha, Thanh-Le and Kilgour, Kevin and Sperber, Matthias and Mediani, Mohammed and Stüker, Sebastian and Waibel, Alex},
 	year = {2016},
@@ -17,7 +15,7 @@
 }
 
 @book{neufeind_work_2018,
-	address = {Lanham, MD},
+	address = {Lanham},
 	title = {Work in the digital age: {{C}}hallenges of the fourth industrial revolution},
 	isbn = {978-1-78660-906-9},
 	shorttitle = {Work in the digital age},
@@ -28,10 +26,8 @@
 
 @book{takeda_new_2016,
 	address = {Amsterdam/Philadelphia},
-	series = {Benjamins Translation Library},
 	title = {New insights in the history of interpreting},
 	isbn = {978-90-272-5867-0},
-	number = {122},
 	publisher = {John Benjamins},
 	editor = {Takeda, Kayoko and Baigorri Jalón, Jesús},
 	year = {2016},
@@ -65,7 +61,7 @@
 }
 
 @book{finn_what_2017,
-	address = {Cambridge, MA},
+	address = {Cambridge},
 	title = {What algorithms want: {{I}}magination in the age of computing},
 	isbn = {978-0-262-03592-7},
 	shorttitle = {What algorithms want},
@@ -86,6 +82,7 @@
 	booktitle = {Proceedings of the {Workshop} {Language} {Resources} for {Translation} {Work} and {Research}},
 	author = {Zanettin, Federico},
 	year = {2002} 
+	pages = {10--14}
 }
 
 @article{ross_print_2017,
@@ -103,11 +100,9 @@
 
 @book{galimberti_i_2009,
 	address = {Milano},
-	number = {1},
-	series = {Serie bianca},
 	title = {I miti del nostro tempo},
 	isbn = {978-88-07-17162-8},
-	publisher = {G. Feltrinelli},
+	publisher = {Feltrinelli},
 	author = {Galimberti, Umberto},
 	year = {2009},
 	keywords = {Social psychology}
@@ -432,7 +427,7 @@
 	address = {{{U}}niversità di {{B}}ologna},
 	author = {De Merulis, Gianpiero},
 	publisher = {{{U}}niversità di {{B}}ologna},
-	title = {L’uso di {InterpretB}ank per la preparazione di una conferenza sul trattamento delle acque reflue: {{L}}ossario terminologico e contributo sperimentale},
+	title = {L’uso di {InterpretB}ank per la preparazione di una conferenza sul trattamento delle acque reflue: {{G}}ossario terminologico e contributo sperimentale},
 	year = {2013}
 }
 
@@ -1595,7 +1590,17 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 	journal = {The Interpreters' Newsletter}, 
 	title = {The use of comparable corpora in interpreting practice and teaching},
 	volume = {1},
+	pages = {133--149},
 	year = {2018}
+}
+
+@article{Gentile2013,
+	author = {Gentile, Paola},
+	journal = {Rivista internazionale di tecnica della traduzione}, 
+	title = {The Status of Conference  Interpreters: A Global Survey into the Profession},
+	volume = {15},
+	pages = {63--82},
+	year = {2013}
 }
 
 @article{Fantinuoli2017a,
