--- a/main.tex
+++ b/main.tex
@@ -38,12 +38,12 @@
 %%%             Chapters                         %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
- \includepaper{chapters/00}
- \includepaper{chapters/01} 
+ %\includepaper{chapters/00}
+ %\includepaper{chapters/01} 
  \includepaper{chapters/02} 
- \includepaper{chapters/03} 
- \includepaper{chapters/04}
- \includepaper{chapters/05} 
+ %\includepaper{chapters/03} 
+ %\includepaper{chapters/04}
+ %\includepaper{chapters/05} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%             Backmatter                       %%%
