new appendix environment, minor fixes

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -81,7 +81,7 @@
 	title = {Corpora in translation practice},
 	booktitle = {Proceedings of the {Workshop} {Language} {Resources} for {Translation} {Work} and {Research}},
 	author = {Zanettin, Federico},
-	year = {2002} 
+	year = {2002},
 	pages = {10--14}
 }
 
