--- a/langsci/styles/langsci-optional.sty
+++ b/langsci/styles/langsci-optional.sty
@@ -8,7 +8,20 @@
 %%   Licence: 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% For project 209, the following env is positioned at a temp location. 
+% Installing a new version of the class will not interfere.
 
+\newenvironment{paperappendix}{%
+    \let\oldthesection\thesection%
+    \let\oldsectionformat\sectionformat%
+    \newcounter{Hsection}% The Hsection counter is needed by hyperref.
+    \setcounter{Hsection}{\thesection}%
+    \setcounter{section}{0}%
+    \def\thesection{\Alph{section}}%
+    \def\sectionformat{\appendixname\ \thesection:\enskip\stepcounter{Hsection}}%
+    }{%
+    \let\thesection\oldthesection%
+    \let\sectionformat\oldsectionformat}
 
 % Heiko Oberdiek
 % http://tex.stackexchange.com/questions/136644/vertical-space-in-interaction-with-figure-center-environment
