--- a/langsci/styles/langsci-optional.sty
+++ b/langsci/styles/langsci-optional.sty
@@ -14,11 +14,9 @@
 \newenvironment{paperappendix}{%
     \let\oldthesection\thesection%
     \let\oldsectionformat\sectionformat%
-    \newcounter{Hsection}% The Hsection counter is needed by hyperref.
-    \setcounter{Hsection}{\thesection}%
     \setcounter{section}{0}%
     \def\thesection{\Alph{section}}%
-    \def\sectionformat{\appendixname\ \thesection:\enskip\stepcounter{Hsection}}%
+    \def\sectionformat{\appendixname\ \thesection:\enskip}%
     }{%
     \let\thesection\oldthesection%
     \let\sectionformat\oldsectionformat}
